--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,50 @@
+--extra-index-url https://download.pytorch.org/whl/cpu
+annotated-types==0.6.0
+anyio==4.2.0
+asgiref==3.7.2
+black==23.12.1
 certifi==2023.11.17
 charset-normalizer==3.3.2
+click==8.1.7
+colorama==0.4.6
 contourpy==1.2.0
 cycler==0.12.1
+Django==4.2.9
+exceptiongroup==1.2.0
+fastapi==0.109.0
 fonttools==4.47.2
+h11==0.14.0
 idna==3.6
+image==1.5.33
 importlib-resources==6.1.1
+isort==5.13.2
 kiwisolver==1.4.5
 matplotlib==3.8.2
+mypy-extensions==1.0.0
 numpy==1.26.3
 packaging==23.2
+pathspec==0.12.1
 pillow==10.2.0
+platformdirs==4.1.0
+pydantic==2.5.3
+pydantic_core==2.14.6
 pyparsing==3.1.1
 python-dateutil==2.8.2
+python-dotenv==1.0.0
+python-multipart==0.0.6
 requests==2.31.0
 scipy==1.11.4
 six==1.16.0
+sniffio==1.3.0
+sqlparse==0.4.4
+starlette==0.35.1
 timm==0.6.7
+tomli==2.0.1
 torch==1.13.1+cpu
 torchaudio==0.13.1+cpu
 torchvision==0.14.1+cpu
-typing-extensions==4.9.0
+typing_extensions==4.9.0
+tzdata==2023.4
 urllib3==2.1.0
+uvicorn==0.26.0
 zipp==3.17.0
